# dgcnn

./: .gitignore  gitignore
pytorch/checkpoints/dgcnn_2048/: main.py.backup
scripts/: 1053.npy  1053.ply  1100.ply  CMakeLists.txt  convert_pcd2ply.cpp  read_pcd.cpp  test.ply  test_frame.npy  visualize_pyh5_data.py  write_pyh5_dataset.py  write_pyh5_real.py
tensorflow/: README.md  provider.py
tensorflow/sem_seg/: batch_inference.py  indoor3d_util.py  model.py  train.py
tensorflow/sem_seg/gazebo_dataset/: all_files.txt
tensorflow/sem_seg/meta/: area1_data_label.txt  class_names.txt  gazebo_data_label.txt
